chore: add documentation, tests, and submission artifacts; prepare repository for submission

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,15 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./postgres/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/01-init.sql
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U airflow"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - airflow-network
 
   airflow:
     build: .
@@ -19,16 +26,34 @@ services:
     environment:
       - AIRFLOW__CORE__EXECUTOR=SequentialExecutor
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
-      - NASA_API_KEY=${NASA_API_KEY}
+      - AIRFLOW__CORE__DAGS_FOLDER=/opt/airflow/dags
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      - NASA_API_KEY=${NASA_API_KEY:-DEMO_KEY}
+      - POSTGRES_DB=airflow
+      - POSTGRES_USER=airflow
+      - POSTGRES_PASSWORD=airflow
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
     ports:
       - "8080:8080"
     volumes:
       - ./airflow:/opt/airflow
       - ./data:/opt/airflow/data
+      - ./.git:/opt/airflow/.git
+    depends_on:
+      postgres:
+        condition: service_healthy
     command: >
       bash -c "airflow db init &&
-               airflow users create --username admin --password admin --firstname a --lastname b --role Admin --email admin@example.com &&
-               airflow webserver & airflow scheduler"
+               airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true &&
+               airflow webserver -p 8080 & airflow scheduler"
+    networks:
+      - airflow-network
 
 volumes:
   postgres_data:
+
+networks:
+  airflow-network:
+    driver: bridge
+
